--- a/gb/21/4/7/n12864511.md
+++ b/gb/21/4/7/n12864511.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdzfji373/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zdzfji373/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zdzfji373/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zdzfji373/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zdzfji373/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zdzfji373/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zdzfji373/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：劳工万岁是假 林祥谦施洋之死另有因</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元2021年04月07日讯】 2018年7月-8月，广东深圳佳士科技有限公司曾发生了部分员工争取组织工会而遭公司解聘，并在冲突中被当地警方抓捕的“佳士事件”，而在网上声援他们的北大、人大等高校学生有的也被警告和抓捕。很明显，中共在用铁拳告诉那些有非分之想的中国人，包括中国工人，任何想要争取权利的抗争都是没有用的。</p>
-<p>不无讽刺的是，中共刚刚播出的百集洗脑微纪录片《百炼成钢：中国共产党的100年》第六集的篇名居然是《劳工万岁》，片中记述了上个世纪二十年代初中共鼓动并发起的工人运动，称以1922年1月香港海员大罢工为起点，1923年2月京汉铁路工人大罢工为终点，中共领导的工人运动掀起了第一个高潮。在前后13个月的时间里，全国发生大小罢工100余次，参加人数在30万以上，其中，为了推翻北洋军阀<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E5%90%B4%E4%BD%A9%E5%AD%9A.md#1">吴佩孚</a>而发动的京汉铁路工人大罢工最广为人知。</p>
-<p>回溯历史，当时的京汉铁路纵贯河北、河南和湖北三省，是连接华北和华中的交通命脉，有重要的经济、政治和军事意义，其运营收入是<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E5%90%B4%E4%BD%A9%E5%AD%9A.md#1">吴佩孚</a>军饷的主要来源之一。中共为此特派出了张国焘、陈潭秋、项英、罗章龙等人领导、发动工人罢工，甚至破坏铁轨，工人们喊出了“京汉铁路总工会万岁”、“劳动阶级胜利万岁”等口号。罢工在劝解无效后，遭到了吴佩孚的镇压，中共党员<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E6%9E%97%E7%A5%A5%E8%B0%A6.md#1">林祥谦</a>、<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E6%96%BD%E6%B4%8B.md#1">施洋</a>被杀，中共党史称其为<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E2%80%9C%E4%BA%8C%E4%B8%83%E6%83%A8%E6%A1%88%E2%80%9D.md#1">“二七惨案”</a>。</p>
+<p>不无讽刺的是，中共刚刚播出的百集洗脑微纪录片《百炼成钢：中国共产党的100年》第六集的篇名居然是《劳工万岁》，片中记述了上个世纪二十年代初中共鼓动并发起的工人运动，称以1922年1月香港海员大罢工为起点，1923年2月京汉铁路工人大罢工为终点，中共领导的工人运动掀起了第一个高潮。在前后13个月的时间里，全国发生大小罢工100余次，参加人数在30万以上，其中，为了推翻北洋军阀<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%90%B4%E4%BD%A9%E5%AD%9A.md#1">吴佩孚</a>而发动的京汉铁路工人大罢工最广为人知。</p>
+<p>回溯历史，当时的京汉铁路纵贯河北、河南和湖北三省，是连接华北和华中的交通命脉，有重要的经济、政治和军事意义，其运营收入是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%90%B4%E4%BD%A9%E5%AD%9A.md#1">吴佩孚</a>军饷的主要来源之一。中共为此特派出了张国焘、陈潭秋、项英、罗章龙等人领导、发动工人罢工，甚至破坏铁轨，工人们喊出了“京汉铁路总工会万岁”、“劳动阶级胜利万岁”等口号。罢工在劝解无效后，遭到了吴佩孚的镇压，中共党员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E7%A5%A5%E8%B0%A6.md#1">林祥谦</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%BD%E6%B4%8B.md#1">施洋</a>被杀，中共党史称其为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E4%BA%8C%E4%B8%83%E6%83%A8%E6%A1%88%E2%80%9D.md#1">“二七惨案”</a>。</p>
 <p>罢工虽然失败了，但中共对此却引以为傲，中共在洗脑片中称“工人运动扩大了中共在全国的政治影响”等等。按理说凭借着工人、农民的支持才做大，并在日本侵华的帮助下窃取了中华民国政权的中共，理应在夺取政权后对工人、农民感恩戴德，至少也不会卸磨杀驴吧，但从中共建政后迄今对工人农民的恶劣态度看，中共还真是利用完了就像抹布一样扔掉。</p>
 <p>试问，中共能允许现在的工人成立真正的工会组织？能允许工人罢工乃至发动暴动？显然答案是否定的。是以中共再说什么“劳工万岁”，还的确是假的不能再假了。</p>
-<p>回过头来再说说中共党史认定的<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E2%80%9C%E4%BA%8C%E4%B8%83%E6%83%A8%E6%A1%88%E2%80%9D.md#1">“二七惨案”</a>。按照中共的说法，“惨案”中死了52人，受伤300多人，60余人被捕。依照中共的认定标准，1989年枪杀了几千甚至上万人的“六四”已无法用惨案形容，而是赤裸裸的大屠杀&#8212;-不管中共如何否认。</p>
-<p>此外，根据2016年6月刊载在《华夏文摘》上，由旅德人士汪晶晶撰写的《六四大屠杀与二七大罢工》一文，我们看到了对“二七惨案”以及<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E6%9E%97%E7%A5%A5%E8%B0%A6.md#1">林祥谦</a>、<ahref="https://github.com/zdzfji373/djy/blob/master/gb/tag/%E6%96%BD%E6%B4%8B.md#1">施洋</a>被杀真相的另一种声音。</p>
+<p>回过头来再说说中共党史认定的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E4%BA%8C%E4%B8%83%E6%83%A8%E6%A1%88%E2%80%9D.md#1">“二七惨案”</a>。按照中共的说法，“惨案”中死了52人，受伤300多人，60余人被捕。依照中共的认定标准，1989年枪杀了几千甚至上万人的“六四”已无法用惨案形容，而是赤裸裸的大屠杀&#8212;-不管中共如何否认。</p>
+<p>此外，根据2016年6月刊载在《华夏文摘》上，由旅德人士汪晶晶撰写的《六四大屠杀与二七大罢工》一文，我们看到了对“二七惨案”以及<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E7%A5%A5%E8%B0%A6.md#1">林祥谦</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%BD%E6%B4%8B.md#1">施洋</a>被杀真相的另一种声音。</p>
 <p>汪晶晶的祖父汪启祚在辛亥革命后的湖北督军府时任军法处处长，兼任陆军审判处处长和两湖军政执法处处长，在1923年中共发动的二七大罢工时，汪启祚的上司是同为湖北黄冈人氏的肖耀南，肖的上司则是直系军阀吴佩孚，而镇压大罢工的正是吴佩孚和肖耀南。</p>
-<p>文中提到，据黄冈乡贤们流传，被中共树为“烈士”的林详谦并非是被“反动军阀们”枪杀的，而据说是在一场混乱中被刀砍死的。至于他是不是如中共宣传的那般高呼着“头可断，工不可复”而死的，乡贤们并不清楚。乡贤们能记得的只是林祥谦当时并非“手无寸铁”。他率领的参与暴乱的工人，个个都手持大刀长矛。他们企图冲击军营最初的原因是，“反动的军阀们”几日前竟胆敢随意抓了几个（在一个名叫刘家庙或李家墩的地方）破坏铁轨的工友。</p>
+<p>文中提到，据黄冈乡贤们流传，被中共树为“烈士”的林详谦并非是被“反动军阀们”枪杀的，而据说是在一场混乱中被刀砍死的。至于他是不是如中共宣传的那般高呼着“头可断，工不可复”而死的，乡贤们并不清楚。乡贤们能记得的只是林祥谦当时并非“手无寸铁”。他率领的参与暴乱的工人，个个都手持大刀长矛。他们企图冲击军营最初的原因是，“反动的军阀们”几日前抓了几个（在一个名叫刘家庙或李家墩的地方）破坏铁轨的工友。</p>
 <p>据悉，抓捕那几个破坏铁轨工人是由汉口警察厅厅长周际芸下的命令，他们被临时关押在督军参谋长张厚生的军营中，该军营有两个连的兵力守卫。林祥谦率人冲击的应该就是张厚生的军营。</p>
 <p>问题是，破坏铁轨之人难道不该抓吗？不该被追究责任吗？这些人被抓就是林祥谦们闹事的理由？在闹事中，虽然罪不致死，但林祥谦被打死自身没有原因吗？显然，林祥谦之死绝非中共粉饰的那般简单。</p>
 <p>而另一个中共党人施洋之死，亦有内幕。施洋早在中共成立前，就组织过湖北省内的马克思主义研究小组，还亲赴湖南，与毛泽东、蔡和森建立的新民学会建立联系，他还是毛的结拜兄弟，毛最初对工人的认识就源自施洋，而与毛的关系或许是他死后备极哀荣的原因。</p>
@@ -33,41 +33,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/6/6/21/n1358616.md#1">中正：吴佩孚--上世纪支持学运的军人</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/3/31/n12847981.md#1">周晓辉：百炼成钢？李大钊陈独秀一叛国死一醒悟</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/2/n12854806.md#1">周晓辉：百炼成钢？蔡和森董必武一遭遣返一成“抹布”</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12859637.md#1">周晓辉：中共生日靠情杀案推定 发展靠金主苏共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/6/21/n1358616.md#1">中正：吴佩孚--上世纪支持学运的军人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/3/31/n12847981.md#1">周晓辉：百炼成钢？李大钊陈独秀一叛国死一醒悟</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/4/2/n12854806.md#1">周晓辉：百炼成钢？蔡和森董必武一遭遣返一成“抹布”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/4/5/n12859637.md#1">周晓辉：中共生日靠情杀案推定 发展靠金主苏共</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513884.md#1" target="_blank">中共用战争的方式进行土改和镇反</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/3/29/n12844310.md#1">金言：改写历史？三星堆掀文明起源争论</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/1/n12852292.md#1">【未解之谜】史前杰作？月亮七大谜团（下）</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/3/n12856808.md#1">【小宇宙传说】人体能量场的奥秘</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/20/10/27/n12504601.md#1">【命理】为何在最成功得意时却意外死亡？</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/6/n12862505.md#1">【时事纵横】武汉陵园挤爆 王毅一句话网络炸锅</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/6/n12862473.md#1">【新闻看点】中共四处布火药桶 习重演清末悲剧？</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/7/n12862618.md#1">【横河观点】中共海上极限施压 白宫拒疫苗护照</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12859533.md#1">武汉清明祭扫 数十万人挤满陵园 当局噤声</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12859457.md#1">日本外相致电王毅90分钟 罕见批评中共</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12858302.md#1">沈舟：中共挑衅升级 美中航母或首次对峙</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/4/n12857795.md#1">梁朝伟漫威角色造型曝光 更名或因片方自我审查</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/4/n12857991.md#1">杨丞琳比赛选唱广东歌 咬字清晰获网友大赞</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12860262.md#1">冯小刚已放弃治疗白癜风 面部苍白近照曝光</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/6/n12860605.md#1">林志玲捐400万台币 协助台铁受灾者所需</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12860065.md#1">38岁胡歌谈演艺事业：已看到自己的天花板</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/6/n12860910.md#1">牙齿脱落要植牙？ 科学家研发长新牙的方法</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/2/n12853238.md#1">跳绳减肥比健走慢跑都好 还防骨松 教你正确做</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/5/n12858778.md#1">瑞典媳妇坦承不会念丈夫的名字 所以叫绰号</a></li>
-<li><a href="https://github.com/zdzfji373/djy/blob/master/gb/21/4/6/n12860600.md#1">儿子升少尉 美军士官长骄傲地向他敬礼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zdzfji373/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zdzfji373/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/7/n12864511.htm">周晓辉：劳工万岁是假 林祥谦施洋之死另有因</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/7/n12864511.htm">周晓辉：劳工万岁是假 林祥谦施洋之死另有因</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zdzfji373/djy/blob/master/gb/21/4/7/n12864511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zdzfji373/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zdzfji373/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdzfji373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdzfji373/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zdzfji373/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/4/7/n12864511.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
